--- a/cart/indexCa.html
+++ b/cart/indexCa.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="styleCa.css" />
     <title>CartPage</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="scriptCa.js"></script>
   </body>
 </html>
