finished home page code with responsiveness.

--- a/home/indexH.html
+++ b/home/indexH.html
@@ -4,10 +4,160 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="styleH.css" />
     <title>HomePage</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <h1>Effortless Threads</h1>
+        <ul>
+          <li><a href="#">OurShop</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Cart</a></li>
+        </ul>
+        <!-- <img id="pocketlogo" src="../photos/pocket.png" /> -->
+      </nav>
+      <div class="hero">
+        <h2>Welcome to Effortless Threads</h2>
+        <p>Taking professional clothing from sexist to sexy since 2021.</p>
+        <a href="#" class="hero-btn">Check Out Our Shop</a>
+      </div>
+    </header>
+    <main>
+      <section class="featured">
+        <h4>Browse Our Featured Threads...</h4>
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade">
+            <img class="slide-photo" src="../photos/slied1.webp" />
+          </div>
+
+          <div class="mySlides fade">
+            <img class="slide-photo" src="../photos/slide2.webp" />
+          </div>
+
+          <div class="mySlides fade">
+            <img class="slide-photo" src="../photos/slide3.webp" />
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br />
+
+        <!-- The dots/circles -->
+        <div style="text-align: center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+        <!-- end of slideshow -->
+
+        <a class="page-link" href="../product/indexP.html">
+          <section class="subsection" id="section1">
+            <h4>Shop Our Latest Threads</h4>
+            <p><div class="pvw-title1"><span></span></div>
+              Shop our latest threads today and discover the perfect balance of
+              style and functionality.
+            </p>
+          </section></a
+        >
+        <section class="subsection" id="section2">
+          <h4>Join Our Community</h4>
+          <p>
+            Join our community of like-minded women who believe in comfortable,
+            stylish clothing that empowers women to feel confident and
+            productive. Sign up for our newsletter, follow us on social media,
+            or join our loyalty program to be the first to know about new
+            arrivals, exclusive discounts, and special events.
+          </p>
+          <a href="#" class="btn">Sign up for our newsletter!</a>
+        </section>
+        <a class="page-link" href="../about/indexA.html">
+          <section class="subsection" id="section3">
+            <h4>Our Mission</h4>
+            <p>
+              At Effortless Threads, our mission is to empower women by
+              providing them with comfortable, stylish and functional clothing
+              that enhances their productivity and confidence.<div class="pvw-title2"><span></span></div>
+            </p>
+          </section>
+        </a>
+      </section>
+    </main>
+    <footer>
+      <section class="footer-section" id="footer-s1">
+        <ul class="social-icons">
+          <li>
+            <a href="https://www.facebook.com/">
+              <img
+                src="../photos/iconfb.png"
+                alt="Facebook Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/">
+              <img
+                src="../photos/iconinsta.png"
+                alt="Instagram Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.snapchat.com/">
+              <img
+                src="../photos/iconsnap.png"
+                alt="Snapchat Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.twitter.com/">
+              <img
+                src="../photos/icontwit.png"
+                alt="Twitter Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-section" id="footer-s2">
+        <h5>COMPANY INFO</h5>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Social Responsibility</a></li>
+          <li><a href="#">Student Discount</a></li>
+        </ul>
+      </section>
+      <section class="footer-section" id="footer-s3">
+        <h5>SUPPORT</h5>
+        <ul>
+          <li><a href="#">Shipping</a></li>
+          <li><a href="#">Returns & Refunds</a></li>
+          <li><a href="#">Size Guide</a></li>
+        </ul>
+      </section>
+      <section class="footer-section" id="footer-s4">
+        &copy; 2023 Effortless Threads. All Rights Reserved.
+      </section>
+    </footer>
     <script src="scriptH.js"></script>
   </body>
 </html>
