--- a/product/indexP.html
+++ b/product/indexP.html
@@ -8,7 +8,84 @@
     <title>ProductPage</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <h1>Effortless Threads</h1>
+        <ul>
+          <li><a href="#">OurShop</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Cart</a></li>
+        </ul>
+        <!-- <img id="pocketlogo" src="../photos/pocket.png" /> -->
+      </nav>
+    </header>
     <div id="products"></div>
+    <footer>
+      <section class="footer-section" id="footer-s1">
+        <ul class="social-icons">
+          <li>
+            <a href="https://www.facebook.com/">
+              <img
+                src="../photos/iconfb.png"
+                alt="Facebook Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/">
+              <img
+                src="../photos/iconinsta.png"
+                alt="Instagram Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.snapchat.com/">
+              <img
+                src="../photos/iconsnap.png"
+                alt="Snapchat Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.twitter.com/">
+              <img
+                src="../photos/icontwit.png"
+                alt="Twitter Icon"
+                class="socialbutton"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-section" id="footer-s2">
+        <h5>COMPANY INFO</h5>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Social Responsibility</a></li>
+          <li><a href="#">Student Discount</a></li>
+        </ul>
+      </section>
+      <section class="footer-section" id="footer-s3">
+        <h5>SUPPORT</h5>
+        <ul>
+          <li><a href="#">Shipping</a></li>
+          <li><a href="#">Returns & Refunds</a></li>
+          <li><a href="#">Size Guide</a></li>
+        </ul>
+      </section>
+      <section class="footer-section" id="footer-s4">
+        &copy; 2023 Effortless Threads. All Rights Reserved.
+      </section>
+    </footer>
     <script src="scriptP.js"></script>
   </body>
 </html>
