Fixed some linting errors after first push

--- a/home/indexH.html
+++ b/home/indexH.html
@@ -37,15 +37,15 @@
         <div class="slideshow-container">
           <!-- Full-width images with number and caption text -->
           <div class="mySlides fade">
-            <img class="slide-photo" src="../photos/slied1.webp" />
+            <img class="slide-photo" src="../photos/slied1.webp" alt="Ali's Set: Plaid blazer and slacks set." />
           </div>
 
           <div class="mySlides fade">
-            <img class="slide-photo" src="../photos/slide2.webp" />
+            <img class="slide-photo" src="../photos/slide2.webp" alt="Jennifer's Skirt: Dark green skirt with gold buttons." />
           </div>
 
           <div class="mySlides fade">
-            <img class="slide-photo" src="../photos/slide3.webp" />
+            <img class="slide-photo" src="../photos/slide3.webp" alt="Jennifer's Set: Mustard blazer and slacks set" />
           </div>
 
           <!-- Next and previous buttons -->
@@ -150,7 +150,7 @@
         <h5>SUPPORT</h5>
         <ul>
           <li><a href="#">Shipping</a></li>
-          <li><a href="#">Returns & Refunds</a></li>
+          <li><a href="#">Returns and Refunds</a></li>
           <li><a href="#">Size Guide</a></li>
         </ul>
       </section>
