--- a/product/indexP.html
+++ b/product/indexP.html
@@ -21,7 +21,20 @@
         <!-- <img id="pocketlogo" src="../photos/pocket.png" /> -->
       </nav>
     </header>
-    <div id="products"></div>
+    <article>
+      <h1>Shop by Style</h1>
+      <h2 class="style-title">Ali</h2>
+      <p>Ali's description</p>
+      <h2 class="style-title">Amanda</h2>
+      <p>Ali's description</p>
+      <h2 class="style-title">Daisy</h2>
+      <p>Daisy's description</p>
+      <h2 class="style-title">Jennifer</h2>
+      <p>Jennifer's description</p>
+      <h2 class="style-title">Mirabel</h2>
+      <p>Mirabel's description</p>
+    </article>
+    <main id="products"></main>
     <footer>
       <section class="footer-section" id="footer-s1">
         <ul class="social-icons">
@@ -78,7 +91,7 @@
         <h5>SUPPORT</h5>
         <ul>
           <li><a href="#">Shipping</a></li>
-          <li><a href="#">Returns & Refunds</a></li>
+          <li><a href="#">Returns and Refunds</a></li>
           <li><a href="#">Size Guide</a></li>
         </ul>
       </section>
