Updated product page

--- a/product/indexP.html
+++ b/product/indexP.html
@@ -21,19 +21,56 @@
         <!-- <img id="pocketlogo" src="../photos/pocket.png" /> -->
       </nav>
     </header>
-    <article>
-      <h1>Shop by Style</h1>
-      <h2 class="style-title">Ali</h2>
-      <p>Ali's description</p>
-      <h2 class="style-title">Amanda</h2>
-      <p>Ali's description</p>
-      <h2 class="style-title">Daisy</h2>
-      <p>Daisy's description</p>
-      <h2 class="style-title">Jennifer</h2>
-      <p>Jennifer's description</p>
-      <h2 class="style-title">Mirabel</h2>
-      <p>Mirabel's description</p>
-    </article>
+    <section id="style-section">
+      <h2 class="style-main-title">Shop by Style</h2>
+      <article id="styles-subsection">
+        <h3 class="style-title">Ali</h3>
+        <p class="style-description">
+          Ali's style is bold and versatile, with a focus on statement pieces.
+          She likes to mix and match different patterns and colors to create
+          eye-catching looks. Her wardrobe is full of comfortable yet stylish
+          pieces, such as loose-fitting pants and oversized tops, that can be
+          dressed up or down. Whether she's picking the kids up from school or
+          attending a business meeting, Ali's wardrobe has got her covered.
+        </p>
+        <h3 class="style-title">Amanda</h3>
+        <p class="style-description">
+          Amanda's style is classic and timeless, with a focus on clean lines
+          and neutral colors. She prefers simple yet elegant pieces that can be
+          worn in a variety of settings. Her wardrobe consists of well-tailored
+          blouses, skirts, and dresses in shades of black, white, and gray.
+          Amanda's style is all about embracing femininity while still being
+          practical and comfortable.
+        </p>
+        <h3 class="style-title">Daisy</h3>
+        <p class="style-description">
+          Daisy's style is feminine and playful, with a focus on soft colors and
+          flowy fabrics. She likes to incorporate fun and flirty details into
+          her outfits, such as ruffles, bows, and lace. Her wardrobe is filled
+          with dresses, skirts, and tops in shades of pink, lavender, and cream.
+          Whether she's running errands or dressing up for a night out, Daisy's
+          pieces are perfect for any occasion.
+        </p>
+        <h3 class="style-title">Jennifer</h3>
+        <p class="style-description">
+          Jennifer's style is edgy and modern, with a focus on bold prints and
+          statement accessories. She likes to experiment with different textures
+          and fabrics, and often mixes and matches unexpected pieces. Her
+          wardrobe includes leather jackets, graphic t-shirts, and chunky
+          jewelry. Jennifer's wardrobe is perfect for balancing her busy work
+          schedule with her personal life, as her pieces can easily be dressed
+          up or down.
+        </p>
+        <h3 class="style-title">Mirabel</h3>
+        <p class="style-description">
+          Mirabel's style is eclectic and bohemian, with a focus on unique
+          prints and vintage-inspired pieces. She likes to incorporate a mix of
+          patterns and textures into her outfits, and often wears flowing maxi
+          dresses and layered jewelry. Her style is all about embracing one's
+          individuality and having fun with fashion.
+        </p>
+      </article>
+    </section>
     <main id="products"></main>
     <footer>
       <section class="footer-section" id="footer-s1">
