Completed product and contact pages

--- a/contact/indexCo.html
+++ b/contact/indexCo.html
@@ -8,6 +8,150 @@
     <title>ContactPage</title>
   </head>
   <body>
-    <script src="scriptCo.js"></script>
-  </body>
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="styleCo.css" />
+        <title>ProductPage</title>
+      </head>
+      <body>
+        <header>
+          <nav>
+            <h1><a href="../home/indexH.html">Effortless Threads</a></h1>
+            <ul>
+              <li><a href="#">OurShop</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Cart</a></li>
+            </ul>
+            <!-- <img id="pocketlogo" src="../photos/pocket.png" /> -->
+          </nav>
+        </header>
+        <main>
+          <h2 class="contact-header">Contact Us!</h2>
+          <section class="contact">
+            <form action="mailto:amoyamen44@gmail.com" method="post">
+              <label>Name</label>
+              <br>
+              <input type= "text" name="name" placeholder="Your name here..." required>
+              <br>
+              <br>
+              <label>Phone</label>
+              <br>
+              <input type= "tel" name="phone" placeholder="(000) 000-0000" required>
+              <br>
+              <br>
+              <label>Email</label>
+              <br>
+              <input type="email" name="email" placeholder="youremail@gmail.com" required>
+              <br>
+              <br>
+              <label>Ask/Tell Us</label>
+              <br>
+              <textarea name= "concern" rows="6" cols="30" placeholder="Ask or tell us your concern here..." required></textarea>
+              <br>
+              <input class="fbutton" type="submit" value="Submit">
+            </form>
+          </section>
+          <section class="mission">
+            <h2>Our Mission</h2>
+            <p>
+              At Effortless Threads, our mission is to empower women by providing them with comfortable, stylish and functional clothing that enhances their productivity and confidence. We believe that professional attire shouldn't have to compromise comfort, practicality, or style. That's why we design every article of clothing with pockets, to eliminate the frustration of having to carry a purse or sacrifice functionality. Our goal is to take professional clothing from sexist to sexy, by promoting inclusivity and empowering women to feel confident and productive in any setting. To keep up with the latest news of our company and earn rewards, subscribe to our Newsletter below.<div class="pvw-title2"><span></span></div>
+            </p>
+          </section>
+          <h2 class="newsletter-header">Sign up for our Newsletter!</h2>
+          <section class="newsletter">
+            <form action="mailto:amoyamen44@gmail.com" method="post">
+              <label>Name</label>
+              <br>
+              <input type= "text" name="name" placeholder="Your name here..." required>
+              <br>
+              <br>
+              <label>Phone</label>
+              <br>
+              <input type= "tel" name="phone" placeholder="(000) 000-0000" required>
+              <br>
+              <br>
+              <label>Email</label>
+              <br>
+              <input type="email" name="email" placeholder="youremail@gmail.com" required>
+              <br>
+              <br>
+              <label>Birthday</label>
+              <br>
+              <input type= "date" name="bday" required></input>
+              <br>
+              <input class="fbutton" type="submit" value="Submit">
+            </form>
+        </main>
+        <footer>
+          <section class="footer-section" id="footer-s1">
+            <ul class="social-icons">
+              <li>
+                <a href="https://www.facebook.com/">
+                  <img
+                    src="../photos/iconfb.png"
+                    alt="Facebook Icon"
+                    class="socialbutton"
+                  />
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.instagram.com/">
+                  <img
+                    src="../photos/iconinsta.png"
+                    alt="Instagram Icon"
+                    class="socialbutton"
+                  />
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.snapchat.com/">
+                  <img
+                    src="../photos/iconsnap.png"
+                    alt="Snapchat Icon"
+                    class="socialbutton"
+                  />
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.twitter.com/">
+                  <img
+                    src="../photos/icontwit.png"
+                    alt="Twitter Icon"
+                    class="socialbutton"
+                  />
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-section" id="footer-s2">
+            <h5>COMPANY INFO</h5>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Social Responsibility</a></li>
+              <li><a href="#">Student Discount</a></li>
+            </ul>
+          </section>
+          <section class="footer-section" id="footer-s3">
+            <h5>SUPPORT</h5>
+            <ul>
+              <li><a href="#">Shipping</a></li>
+              <li><a href="#">Returns and Refunds</a></li>
+              <li><a href="#">Size Guide</a></li>
+            </ul>
+          </section>
+          <section class="footer-section" id="footer-s4">
+            &copy; 2023 Effortless Threads. All Rights Reserved.
+          </section>
+        </footer>
+        <script src="scriptCo.js"></script>
+      </body>
+    </html>
