--- a/home/indexH.html
+++ b/home/indexH.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <h1>Effortless Threads</h1>
+        <h1><a>Effortless Threads</a></h1>
         <ul>
           <li><a href="#">OurShop</a></li>
           <li><a href="#">About Us</a></li>
@@ -80,7 +80,7 @@
             or join our loyalty program to be the first to know about new
             arrivals, exclusive discounts, and special events.
           </p>
-          <a href="#" class="btn">Sign up for our newsletter!</a>
+          <a href="../contact/indexCo.html" class="btn">Sign up for our newsletter!</a>
         </section>
         <a class="page-link" href="../about/indexA.html">
           <section class="subsection" id="section3">
@@ -88,7 +88,7 @@
             <p>
               At Effortless Threads, our mission is to empower women by
               providing them with comfortable, stylish and functional clothing
-              that enhances their productivity and confidence.<div class="pvw-title2"><span></span></div>
+              that enhances their productivity and confidence. <div class="pvw-title2"><span></span></div>
             </p>
           </section>
         </a>
