--- a/product/indexP.html
+++ b/product/indexP.html
@@ -5,20 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styleP.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>ProductPage</title>
   </head>
   <body>
     <header>
       <nav>
-        <h1><a href="../home/indexH.html">Effortless Threads</a></h1>
-        <ul>
-          <li><a href="#">OurShop</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Cart</a></li>
-        </ul>
-        <!-- <img id="pocketlogo" src="../photos/pocket.png" /> -->
+        <section class="nav-header">
+          <h1>
+            <a href="../home/indexH.html">Effortless Threads</a>  
+            <a href="javascript:void(0);" class="icon">
+              <i class="fa fa-bars"></i>
+            </a>
+          </h1>
+        </section>
+        <div id="links">
+          <ul>
+            <li><a href="../product/indexP.html">Our Shop</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="../contact/indexCo.html">Contact Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Cart</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <section id="style-section">
