--- a/indexCo.html
+++ b/indexCo.html
@@ -27,10 +27,10 @@
             <div id="links">
               <ul>
                 <li><a href="../home/indexH.html">Our Shop</a></li>
-                <li><a href="../about/indexA.html">About Us</a></li>
-                <li><a href="../contact/indexCo.html">Contact Us</a></li>
+                <li><a href="indexA.html">About Us</a></li>
+                <li><a href="indexCo.html">Contact Us</a></li>
                 <li><a href="https://arcadiaquill.com/19602/features/the-history-behind-womens-pockets/">Blog</a></li>
-                <li><a href="../cart/indexCa.html">Cart</a></li>
+                <li><a href="indexCa.html">Cart</a></li>
               </ul>
             </div>
           </nav>
@@ -108,7 +108,7 @@
               <li>
                 <a href="https://www.facebook.com/">
                   <img
-                    src="../photos/iconfb.png"
+                    src="./photos/iconfb.png"
                     alt="Facebook Icon"
                     class="socialbutton"
                   />
@@ -118,7 +118,7 @@
               <li>
                 <a href="https://www.instagram.com/">
                   <img
-                    src="../photos/iconinsta.png"
+                    src="./photos/iconinsta.png"
                     alt="Instagram Icon"
                     class="socialbutton"
                   />
@@ -128,7 +128,7 @@
               <li>
                 <a href="https://www.snapchat.com/">
                   <img
-                    src="../photos/iconsnap.png"
+                    src="./photos/iconsnap.png"
                     alt="Snapchat Icon"
                     class="socialbutton"
                   />
@@ -138,7 +138,7 @@
               <li>
                 <a href="https://www.twitter.com/">
                   <img
-                    src="../photos/icontwit.png"
+                    src="./photos/icontwit.png"
                     alt="Twitter Icon"
                     class="socialbutton"
                   />
@@ -150,17 +150,17 @@
           <section class="footer-section" id="footer-s2">
             <h5>COMPANY INFO</h5>
             <ul>
-              <li><a href="../about/indexA.html">About Us</a></li>
-              <li><a href="../about/indexA.html">Social Responsibility</a></li>
-              <li><a href="../about/indexA.html">Student Discount</a></li>
+              <li><a href="indexA.html">About Us</a></li>
+              <li><a href="indexA.html">Social Responsibility</a></li>
+              <li><a href="indexA.html">Student Discount</a></li>
             </ul>
           </section>
           <section class="footer-section" id="footer-s3">
             <h5>SUPPORT</h5>
             <ul>
-              <li><a href="../contact/indexCo.html">Shipping</a></li>
-              <li><a href="../contact/indexCo.html">Returns and Refunds</a></li>
-              <li><a href="../contact/indexCo.html">Size Guide</a></li>
+              <li><a href="indexCo.html">Shipping</a></li>
+              <li><a href="indexCo.html">Returns and Refunds</a></li>
+              <li><a href="indexCo.html">Size Guide</a></li>
             </ul>
           </section>
           <section class="footer-section" id="footer-s4">
