--- a/indexH.html
+++ b/indexH.html
@@ -25,11 +25,11 @@
         <!-- Nav links thorugh pages -->
         <div id="links">
           <ul>
-            <li><a href="../product/indexP.html">Our Shop</a></li>
-            <li><a href="../about/indexA.html">About Us</a></li>
-            <li><a href="../contact/indexCo.html">Contact Us</a></li>
+            <li><a href="indexP.html">Our Shop</a></li>
+            <li><a href="indexA.html">About Us</a></li>
+            <li><a href="indexCo.html">Contact Us</a></li>
             <li><a href="https://arcadiaquill.com/19602/features/the-history-behind-womens-pockets/">Blog</a></li>
-            <li><a href="../cart/indexCa.html">Cart</a></li>
+            <li><a href="indexCa.html">Cart</a></li>
           </ul>
         </div>
       </nav>
@@ -39,7 +39,7 @@
       <div class="hero">
         <h2>Welcome to Effortless Threads</h2>
         <p>Taking professional clothing from sexist to sexy since 2021.</p>
-        <a href="../product/indexP.html" class="hero-btn">Check Out Our Shop</a>
+        <a href="indexP.html" class="hero-btn">Check Out Our Shop</a>
       </div>
     </header>
     <main>
@@ -53,15 +53,15 @@
         <div class="slideshow-container">
           <!-- Create a div to taget each slide itself -->
           <div class="slide">
-            <img class="slide-photo" src="../photos/slied1.webp" alt="Ali's Set: Plaid blazer and slacks set." />
+            <img class="slide-photo" src="./photos/slied1.webp" alt="Ali's Set: Plaid blazer and slacks set." />
           </div>
       
           <div class="slide">
-            <img class="slide-photo" src="../photos/slide2.webp" alt="Jennifer's Skirt: Dark green skirt with gold buttons." />
+            <img class="slide-photo" src="./photos/slide2.webp" alt="Jennifer's Skirt: Dark green skirt with gold buttons." />
           </div>
       
           <div class="slide">
-            <img class="slide-photo" src="../photos/slide3.webp" alt="Jennifer's Set: Mustard blazer and slacks set" />
+            <img class="slide-photo" src="./photos/slide3.webp" alt="Jennifer's Set: Mustard blazer and slacks set" />
           </div>
           <!-- Symbols for prev and next buttons -->
           <a class="prev">&#10094;</a>
@@ -78,7 +78,7 @@
 
     <!-- ---------------------------------------SUBSECTIONS CODE---------------------------------------------------- -->
         <!-- Subsection 1 -->
-        <a class="page-link" href="../product/indexP.html">
+        <a class="page-link" href="indexP.html">
           <!-- Wrap entire section in a tag to make the entire section clickable link -->
           <section class="subsection" id="section1">
             <h4>Shop Our Latest Threads</h4>
@@ -98,10 +98,10 @@
             or join our loyalty program to be the first to know about new
             arrivals, exclusive discounts, and special events.
           </p>
-          <a href="../contact/indexCo.html" class="btn">Sign up for our newsletter!</a>
+          <a href="indexCo.html" class="btn">Sign up for our newsletter!</a>
         </section>
         <!-- Subsection 1 -->
-        <a class="page-link" href="../about/indexA.html">
+        <a class="page-link" href="indexA.html">
           <section class="subsection" id="section3">
             <h4>Our Mission</h4>
             <p>
@@ -122,7 +122,7 @@
           <li>
             <a href="https://www.facebook.com/">
               <img
-                src="../photos/iconfb.png"
+                src="./photos/iconfb.png"
                 alt="Facebook Icon"
                 class="socialbutton"
               />
@@ -132,7 +132,7 @@
           <li>
             <a href="https://www.instagram.com/">
               <img
-                src="../photos/iconinsta.png"
+                src="./photos/iconinsta.png"
                 alt="Instagram Icon"
                 class="socialbutton"
               />
@@ -142,7 +142,7 @@
           <li>
             <a href="https://www.snapchat.com/">
               <img
-                src="../photos/iconsnap.png"
+                src="./photos/iconsnap.png"
                 alt="Snapchat Icon"
                 class="socialbutton"
               />
@@ -152,7 +152,7 @@
           <li>
             <a href="https://www.twitter.com/">
               <img
-                src="../photos/icontwit.png"
+                src="./photos/icontwit.png"
                 alt="Twitter Icon"
                 class="socialbutton"
               />
