Fixed home linking issues

--- a/home/indexH.html
+++ b/home/indexH.html
@@ -164,17 +164,17 @@
       <section class="footer-section" id="footer-s2">
         <h5>COMPANY INFO</h5>
         <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Social Responsibility</a></li>
-          <li><a href="#">Student Discount</a></li>
+          <li><a href="../contact/indexCo.html">About Us</a></li>
+          <li><a href="../contact/indexCo.html">Social Responsibility</a></li>
+          <li><a href="../contact/indexCo.html">Student Discount</a></li>
         </ul>
       </section>
       <section class="footer-section" id="footer-s3">
         <h5>SUPPORT</h5>
         <ul>
-          <li><a href="#">Shipping</a></li>
-          <li><a href="#">Returns and Refunds</a></li>
-          <li><a href="#">Size Guide</a></li>
+          <li><a href="../contact/indexCo.html">Shipping</a></li>
+          <li><a href="../contact/indexCo.html">Returns and Refunds</a></li>
+          <li><a href="../contact/indexCo.html">Size Guide</a></li>
         </ul>
       </section>
       <section class="footer-section" id="footer-s4">
