updated linting errors

--- a/contact/indexCo.html
+++ b/contact/indexCo.html
@@ -93,7 +93,7 @@
               <br>
               <label>Birthday</label>
               <br>
-              <input type= "date" name="bday" required></input>
+              <input type= "date" name="bday" required>
               <br>
               <input class="fbutton" id="newsletter-button" type="submit" value="Submit">
             </form>
