--- a/product/indexP.html
+++ b/product/indexP.html
@@ -50,7 +50,7 @@
             attending a business meeting, Ali's wardrobe has got her covered.
           </p>
         </div>
-        <div class="models-style"></div>
+        <div class="models-style">
           <h3 class="style-title">Amanda</h3>
           <p class="style-description">
             Amanda's style is classic and timeless, with a focus on clean lines
@@ -61,7 +61,7 @@
             practical and comfortable.
           </p>
         </div>
-        <div class="models-style"></div>
+        <div class="models-style">
           <h3 class="style-title">Daisy</h3>
           <p class="style-description">
             Daisy's style is feminine and playful, with a focus on soft colors and
